--- a/records-api-example.ipynb
+++ b/records-api-example.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"http://localhost:8002/v1/project/PROJECT_ID/record\""
+    "url = \"https://api.metatext.ai/v1/project/PROJECT_ID/record\""
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "`method`: `post`\n",
     "\n",
-    "`url`: `http://localhost:8002/v1/project/project_id/record`\n",
+    "`url`: `https://api.metatext.ai/v1/project/project_id/record`\n",
     "            \n",
     "`payload`: \n",
     "\n",
@@ -308,7 +308,7 @@
    "source": [
     "`method`: `get`\n",
     "\n",
-    "`url`: `http://localhost:8002/v1/project/project_id/record/record_id`"
+    "`url`: `https://api.metatext.ai/v1/project/project_id/record/record_id`"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "source": [
     "`method`: `put`\n",
     "\n",
-    "`url`: `http://localhost:8002/v1/project/project_id/record/record_id`\n",
+    "`url`: `https://api.metatext.ai/v1/project/project_id/record/record_id`\n",
     "            \n",
     "`payload`: \n",
     "\n",
@@ -511,7 +511,7 @@
    "source": [
     "`method`: `delete`\n",
     "\n",
-    "`url`: `http://localhost:8002/v1/project/project_id/record/record_id`"
+    "`url`: `https://api.metatext.ai/v1/project/project_id/record/record_id`"
    ]
   },
   {
